--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -168,7 +168,7 @@ body {
     box-shadow: 0 1px 3px 0 rgba(60,64,67,0.3);
 }
 
-/* Calendar Grid */
+/* Calendar Grid layout */
 .calendar-grid {
     flex: 1;
     display: flex;
@@ -183,7 +183,7 @@ body {
     left: 0;
     z-index: 2;
 }
-
+/* Grid layout for calender days */
 .days-grid {
     flex: 1;
     display: grid;
@@ -191,7 +191,7 @@ body {
     border-left: 1px solid var(--border-color);
     background: white;
 }
-
+/*Individual day colmn*/
 .day-column {
     min-height: 1440px; /* 24 Stunden * 60px */
     border-right: 1px solid var(--border-color);
